Fixes image cropper issue where it crops the wrong area

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -106,6 +106,12 @@ img.index{
   padding-bottom:20px;
   width:100%;
 }
+#edit-photo{
+  margin-left:auto;
+  margin-right:auto;
+  padding-top:20px;
+  padding-bottom:20px;
+}
 .panel.photo{
   width:100%;
   border:none;
